# Pulse

./: .dockerignore  .env.example  .gitignore  Makefile  README.en.md  README.md  docker-compose.yml  pyproject.toml
config/: router_rules.json
config/profile/: job.example.yaml
docs/: Pulse-AgentRuntime设计.md  Pulse-DomainMemory与Tool模式.md  Pulse-MCP优先实施方案.md  Pulse-MemoryRuntime设计.md  Pulse-内核架构总览.md  Pulse命名规则.md  Pulse实施计划.md  Pulse架构方案.md  README.md  V2架构设计.md  code-review-checklist.md
docs/adr/: ADR-001-ToolUseContract.md  ADR-002-BrowserDriver-Patchright.md  ADR-003-ActionReport.md  ADR-004-AutoReplyContract.md  ADR-005-Observability.md  ADR-006-SafetyPlane.md  ADR-006-v2-SafetyPlane.md
docs/archive/: Demo录制检查清单.md  Demo演示脚本.md  JD匹配偏差分析与方案设计.md  OfferPilot实施方案.md  OpenClaw部署复盘与踩坑手册.md  OpenClaw面试速查手册.md  Pulse剩余验收关口清单.md  Pulse发布前检查清单.md  Pulse差距审查与实施计划.md  Pulse最终收尾清单.md  boss-chat-automation-v2.md  browser-agent-architecture-decision.md  debug-boss-antibot-postmortem.md  openclaw调研.md  备忘.md
docs/dom-specs/: README.md
docs/dom-specs/boss/: README.md
docs/engineering/: agent-concepts.md  pulse-conventions.md  safety-rules-vs-intelligence.md  testing-guide.md
docs/modules/job/: architecture.md
infra/sql/: init_db.sql
scripts/: _dryrun_match.py  _dump_job_memory.py  _seed_user_traits.py  _wait_backend.sh  boss_login.py  boss_mcpctl.sh  dump_boss_card_html.py  dump_boss_dom.py  jobmemory_dedup_maintenance.py  pulsectl.sh  run_smoke.sh  setup-pg.sh  setup.sh  smoke_auto_reply.py  smoke_domain_preference_dispatch.py  smoke_events.py  smoke_imports.py  smoke_job_greet_pipeline.py  smoke_memory_boundary.py  smoke_patrol_control.py  smoke_router_priority.py  smoke_startup_check.py  start.sh  start_backend.sh  start_boss_mcp.sh
src/pulse/: README.md  cli.py
tests/: conftest.py  test_p0_integration.py
(+215 files in other folders)
